[Major] Refactored basic auth and getRemoteIp() helper